--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,9 +1,71 @@
+* {
+    box-sizing: border-box;
+    margin: 0px;
+}
+
+h1 {
+    margin-bottom: 10px;
+}
+
+.menu {
+    width: 100%;
+    min-width: 120px;
+    padding: 10px;
+}
+
 .row {
     width: 100%;
+    min-width: 120px;
 }
+
 
 .row h1 {
     text-align:center;
+}
+
+p {
+    float: right;
+    padding: 20px;
+
+
+}
+
+.top-right {
+    float: right;
+    border: 1px solid black;
+    padding: 10px;
+    width: 20%;
+    text-align: center;
+    min-width: 100px;
+}
+
+#chicken .top-right {
+    background-color: rgb(252, 104, 104);
+
+}
+
+#beef .top-right {
+    background-color: rgb(157, 255, 157);
+}
+
+#sushi .top-right {
+    background-color: rgb(88, 88, 255);
+}
+
+#chicken {
+    background-color: lightgray;
+    margin-bottom: 10px;
+
+}
+
+#beef {
+    background-color: lightgray;
+    margin-bottom: 10px;
+}
+
+#sushi {
+    background-color: lightgray;
+    margin-bottom: 10px;
 }
 
 @media (max-width: 576px) {
@@ -89,6 +151,11 @@
     }
     .col-md-12 {
         width: 100%;
+    }
+
+    #sushi {
+        width: 100%;
+
     }
 
 }
