--- a/module2-solution/css/style2.css
+++ b/module2-solution/css/style2.css
@@ -1,22 +1,33 @@
-* {
+html {
     box-sizing: border-box;
+    font-family: Verdana, Helvetica, Tahoma, Trebuchet MS;
+  }
+
+  *, *:before, *:after {
+    box-sizing: inherit;
     margin: 0px;
-}
+  }
+  
 
 h1 {
     margin-bottom: 10px;
+    font-size: 2.25em;
+    text-align: center;
 }
 
 .menu {
     width: 100%;
-    min-width: 120px;
+    /*min-width: 120px;*/
     padding: 10px;
     text-align: center;
 }
 
 .row {
     width: 100%;
-    min-width: 120px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 20px;
 }
 
 
@@ -27,8 +38,8 @@ h1 {
 p {
     float: right;
     padding: 20px;
-
-
+    display: inline;
+    min-width: 200px;
 }
 
 .top-right {
@@ -37,41 +48,49 @@ p {
     padding: 10px;
     width: 20%;
     text-align: center;
-    min-width: 100px;
+    font-size: 1.5em;
+    display: inline;
+    /*min-width: 100px;*/
 }
 
 #chicken .top-right {
     background-color: rgb(252, 104, 104);
-
+    min-width: 200px;
 }
 
 #beef .top-right {
     background-color: rgb(157, 255, 157);
+    min-width: 200px;
 }
 
 #sushi .top-right {
     background-color: rgb(88, 88, 255);
+    min-width: 200px;
 }
 
 #chicken {
     background-color: lightgray;
-    margin-bottom: 10px;
-
+    margin-bottom: 20px;
+    border: 1px solid black;
+    min-width: 202px;
 }
 
 #beef {
     background-color: lightgray;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    border: 1px solid black;
+    min-width: 202px;
 }
 
 #sushi {
     background-color: lightgray;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    border: 1px solid black;
+    min-width: 202px;
 }
 
 @media (max-width: 576px) {
     .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-        float: left;
         border: 0px solid green;
     }
     .col-sm-1 {
@@ -114,7 +133,6 @@ p {
 
 @media (min-width: 577px) and (max-width: 991px) {
     .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-        float: left;
         border: 0px solid green;
     }
     .col-md-1 {
@@ -133,7 +151,7 @@ p {
         width: 41.66%;
     }
     .col-md-6 {
-        width: 50%;
+        width: 48%;
     }
     .col-md-7 {
         width: 58.33%;
@@ -161,9 +179,8 @@ p {
 
 }
 
-@media (min-width: 992px) {
+@media only screen and (min-width: 992px) {
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-        float: left;
         border: 0px solid green;
     }
     .col-lg-1 {
@@ -176,7 +193,7 @@ p {
         width: 25%;
     }
     .col-lg-4 {
-        width: 33%;
+        width: 31%;
     }
     .col-lg-5 {
         width: 41.66%;
